修改版本号

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 *.xcuserstate
 LYThemeKit/LYThemeKit.xcodeproj/project.xcworkspace/xcuserdata/anita.xcuserdatad/UserInterfaceState.xcuserstate
 *.xcuserstate
+.DS_Store
